--- a/css/demo(1).css
+++ b/css/demo(1).css
@@ -398,6 +398,103 @@ article>div{
 	left:131px;
 	color:#ababab;
 }
+/*fff*/
+.contant{
+	width:100%;
+	height:389px;
+	clear:both;
+	position: relative;
+}
+.contant .contant1{
+	width:1170px;
+	height:389px;
+	margin: 50px auto 0 auto;
+}
+.contant .contant1>h2{
+    color: #475168;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 20px 0 20px 0;
+    font-family: 'Fjalla One', sans-serif;
+}
+.contant .contant1 .can{
+	width:270px;
+	height:202.5px;
+	background: url(../images/img1.jpg) no-repeat center center ;
+	background-size:100% 100%;
+	float:left;
+	margin-right: 20px;
+}
+.contant .contant1 .can:hover{
+	transition: 1s;
+	background-size:300% 300% ;
+}
+.arrow { 
+	cursor: pointer; 
+	line-height: 39px; 
+	text-align: center; 
+	font-size: 22px; 
+	font-weight: bold; 
+	width: 70px; 
+	height: 40px;  
+	position: absolute; 
+	z-index: 2;
+	top: 278px; 
+	background-color:#EEEEEE;
+	color: #7C858E;
+	border-radius: 5px;
+}
+#prve{
+	left:578px;
+}
+#next{
+	left:670px
+}
+.arrow:hover{
+	background: #F77B6F;
+}
+.container{
+	width:100%;
+	height:400px;
+	background: url(../images/flat_parallax.jpg);
+	background-size: cover;
+}
+.container .container1{
+	width: 1170px;
+	height: 250px;
+	margin: 0 auto;
+}
+.container .container1>h1{
+	text-align: center;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 300;
+    line-height: 40px;
+    margin-top: 160px;
+    display: inline-block;
+    font-family: 'Open Sans', sans-serif;
+}
+/*ggg*/
+.logo{
+	width: 100%;
+	height: 160px;
+	
+}
+.logo .logo1{
+	width: 1170px;
+	height: 160px;
+	margin: 0 auto;
+}
+.logo .logo1 ul li{
+	float: left;
+}
+
+
+
+
+
+
 
 
 
